# seer-training

./: .gitignore  .gitmodules  CMakeLists.txt
include/: data_controller.h  data_generator.h  data_writer.h  file_reader_iterator.h  line_count_size.h  raw_fen_reader.h  sample.h  sample_reader.h  sample_writer.h  session.h  stochastic_multiplex_sample_reader.h  training.h
scripts/: config.py  config.yaml  dataset.py  dataset_summary.py  factorizers.py  generate_base_dataset.py  generate_data.py  inspect_dataset.py  inspect_factorization.py  inspect_feature_transformer.py  inspect_model.py  lasso.py  model.py  prepare_dataset.py  score_distribution.py  stochastic_multiplex_reader.py  test_dataset.py  test_factorization.py  test_feature_transformer.py  test_model.py  test_multiplex_reader.py  train.py  util.py  visualize_feature_transformer.py  visualize_p_feature_transformer.py
src/: seer_train.cc
test/: test_continuation.cc  test_data_gen.cc  test_fen_reader.cc  test_generate_links.cc  test_line_count_size.cc  test_sample_reader.cc
